@@ -43,18 +43,6 @@ jobs:
           image: symless/synergy-core:debian11
           packager: deb
           name: debian11
-        fedora28:
-          image: symless/synergy-core:fedora28
-          packager: rpm
-          name: fedora28
-        fedora29:
-          image: symless/synergy-core:fedora29
-          packager: rpm
-          name: fedora29
-        fedora30:
-          image: symless/synergy-core:fedora30
-          packager: rpm
-          name: fedora30
         fedora33:
           image: symless/synergy-core:fedora33
           packager: rpm
@@ -71,6 +59,14 @@ jobs:
           image: symless/synergy-core:fedora36
           packager: rpm
           name: fedora36
+        fedora37:
+          image: symless/synergy-core:fedora37
+          packager: rpm
+          name: fedora37
+        fedora38:
+          image: symless/synergy-core:fedora38
+          packager: rpm
+          name: fedora38
         centos7.6:
           image: symless/synergy-core:centos7.6
           packager: rpm
